src/test/deca/context/invalid/oracle/wrong_cast3.deca
{
    int i = 1.0;
}